--- a/大实训一/day_1/我的订单/css/indent.less
+++ b/大实训一/day_1/我的订单/css/indent.less
@@ -62,6 +62,10 @@ html,body,.warp{
                 border-top-right-radius: 6px;
                 color: #ff7f1d;
             }
+            span:hover{
+                background: #ff7f1d;
+                color: #fff9f9;
+            }
         }
     }
     nav{
@@ -162,6 +166,17 @@ html,body,.warp{
                     span:nth-child(3){
                         margin-left: 0.5rem;
                     }
+                }
+            }
+        }
+        .main{
+            .main-info{
+                position: relative;
+                .right{
+                    position: absolute;
+                    right: 1rem;
+                    top: 1.2rem;
+                    color: #f64444;                        
                 }
             }
         }
@@ -292,6 +307,10 @@ html,body,.warp{
                 border-bottom-right-radius: 6px;
                 border-top-right-radius: 6px;
                 color: #ff7f1d;
+            }
+            span:hover{
+                background: #ff7f1d;
+                color: #fff9f9;
             }
         }
     }
