--- a/大实训一/day_1/我的订单/css/details.less
+++ b/大实训一/day_1/我的订单/css/details.less
@@ -145,6 +145,97 @@ html,body,.warp{
                     }  
                 }
             }
+            .main-plan{
+                background: #f2f2f2;
+                padding-top: 0.5rem;
+                box-sizing: border-box;
+                .plan-top{
+                    .whb(100%,2.5rem,#FFFFFF);
+                    padding: 0 1rem;
+                    box-sizing: border-box;
+                    line-height: 2.5rem;
+                    font-size: 1.4rem;
+                    color: #494949;
+                    border-bottom: 1px solid #f9f9f9;
+                }
+                .plan-info{
+                    padding: 0.5rem 1rem;
+                    background: #FFFFFF;
+                    box-sizing: border-box;
+                    border-bottom: 1px solid #f9f9f9;
+                    color: #bfbfbf;
+
+                     p:nth-child(1){
+                        span:nth-child(3){
+                            margin-left: 1rem;
+                        }
+                    }
+                    p:nth-child(3){
+                        .box(horizontal);
+                        span:nth-child(1){
+                            display: inline-block;
+                        }
+                        span:nth-child(2){
+                            padding-left: 0.2rem;
+                            box-sizing: border-box;
+                            -webkit-box-flex:1;
+                            display: block;
+                        }
+                    }
+                    p:nth-child(5){
+                        span:nth-child(2){
+                            color: #ff8838;
+                        }
+                        span:nth-child(3){
+                            margin-left: 1rem;
+                        }
+                    }
+                    p:nth-child(4){
+                        span:nth-child(3){
+                            margin-left: 1rem;
+                        }
+                    }
+                     p:nth-child(6){
+                        .box(horizontal);
+                        span:nth-child(1){
+                            display: inline-block;
+                        }
+                        span:nth-child(2){
+                            padding-left: 0.2rem;
+                            box-sizing: border-box;
+                            -webkit-box-flex:1;
+                            display: block;
+                        }
+                    }
+                    .last{
+                        color: #959595;
+                        img{
+                            .whb(1.1rem,auto,none);
+                            margin-right: 0.2rem;
+                        }
+                        span{
+                            color: #ff9a5f;
+                        }
+                    }
+                    .black{
+                        span:nth-child(3){
+                            margin-left: 1rem;
+                        }
+                    }
+                }
+                .bottom{
+                    padding-left: 4.8rem;
+                    box-sizing: border-box;
+                    a{
+                        float: left;
+                        padding: 0.5rem 0.2rem;
+                        box-sizing: border-box;
+                        img{
+                            .whb(4.4rem,auto,none);
+                        }
+                    }
+                }
+            }
             .main-news{
                 .whb(100%,2.6rem,none);
                 line-height: 2.6rem;
@@ -193,6 +284,7 @@ html,body,.warp{
                         border-radius: 5px;
                         padding: 0.1rem 0.3rem;
                         box-sizing: border-box;
+                        color: #333333;
                     }  
                 }
             }
