--- a/大实训一/day_1/登录注册/css/home.css
+++ b/大实训一/day_1/登录注册/css/home.css
@@ -6,17 +6,37 @@ html {
   width: 100%;
   height: 100%;
 }
-html,
+.warp,
 body,
-.warp {
+html {
   width: 100%;
   height: 100%;
 }
 .warp {
   display: -webkit-box;
   -webkit-box-orient: vertical;
+  overflow: hidden;
 }
-.warp header {
+.warp .contained {
+  -webkit-box-flex: 1;
+  display: -webkit-box;
+  -webkit-box-orient: horizontal;
+  position: relative;
+  left: 0;
+}
+.warp .contained div {
+  width: 100%;
+  height: auto;
+  background: none;
+}
+.warp .contained .home {
+  width: 100%;
+  height: auto;
+  background: none;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+.warp .contained .home header {
   padding: 0 1rem;
   box-sizing: border-box;
   display: -webkit-box;
@@ -27,25 +47,25 @@ body,
   line-height: 3.8rem;
   border-bottom: 1px solid #e8e8e8;
 }
-.warp header .left,
-.warp header .right {
+.warp .contained .home header .left,
+.warp .contained .home header .right {
   width: 1.5rem;
   height: auto;
   background: none;
 }
-.warp header .left img,
-.warp header .right img {
+.warp .contained .home header .left img,
+.warp .contained .home header .right img {
   width: 100%;
   height: auto;
   background: none;
 }
-.warp header h1 {
+.warp .contained .home header h1 {
   -webkit-box-flex: 1;
   text-align: center;
   font-size: 1.6rem;
   color: #262626;
 }
-.warp nav {
+.warp .contained .home nav {
   display: -webkit-box;
   -webkit-box-orient: horizontal;
   padding: 1rem;
@@ -53,81 +73,81 @@ body,
   position: relative;
   border-bottom: 1px solid #dddddd;
 }
-.warp nav .nav-left {
+.warp .contained .home nav .nav-left {
   width: 6.4rem;
   height: auto;
   background: none;
 }
-.warp nav .nav-left dl {
+.warp .contained .home nav .nav-left dl {
   text-align: center;
 }
-.warp nav .nav-left dl dt {
+.warp .contained .home nav .nav-left dl dt {
   width: auto;
   height: 4.8rem;
   background: none;
 }
-.warp nav .nav-left dl dt img {
+.warp .contained .home nav .nav-left dl dt img {
   width: 4.8rem;
   height: auto;
   background: none;
 }
-.warp nav .nav-left dl dd {
+.warp .contained .home nav .nav-left dl dd {
   padding-top: 0.4rem;
   box-sizing: border-box;
   color: #333333;
   letter-spacing: 0.1rem;
 }
-.warp nav .nav-centre {
-  margin: 1rem 0 0 0;
+.warp .contained .home nav .nav-centre {
+  margin: 1rem 0 0;
   box-sizing: border-box;
   border-left: 1px solid #eaeaea;
 }
-.warp nav .nav-centre p {
+.warp .contained .home nav .nav-centre p {
   margin-left: 1.2rem;
   font-size: 1.4rem;
 }
-.warp nav .nav-centre p span {
+.warp .contained .home nav .nav-centre p span {
   padding-left: 0.6rem;
   box-sizing: border-box;
 }
-.warp nav .nav-centre p b {
+.warp .contained .home nav .nav-centre p b {
   padding-left: 0.6rem;
   box-sizing: border-box;
 }
-.warp nav .nav-centre p img {
+.warp .contained .home nav .nav-centre p img {
   width: 4rem;
   height: auto;
   background: none;
 }
-.warp nav .nav-centre p:nth-child(2) {
+.warp .contained .home nav .nav-centre p:nth-child(2) {
   padding-top: 1.6rem;
   box-sizing: border-box;
 }
-.warp nav .nav-centre p:nth-child(2) span {
+.warp .contained .home nav .nav-centre p:nth-child(2) span {
   color: #ff846a;
 }
-.warp nav .boult {
+.warp .contained .home nav .boult {
   position: absolute;
   top: 3.5rem;
   right: 1.6rem;
 }
-.warp nav .boult img {
+.warp .contained .home nav .boult img {
   width: 1rem;
   height: auto;
   background: none;
 }
-.warp section {
+.warp .contained .home section {
   -webkit-box-flex: 1;
   background: #f2f2f2;
   overflow: auto;
 }
-.warp section::-webkit-scrollbar {
+.warp .contained .home section::-webkit-scrollbar {
   width: 0;
 }
-.warp section .main {
+.warp .contained .home section .main {
   margin-top: 0.8rem;
 }
-.warp section .main .main-start {
+.warp .contained .home section .main .main-start {
   border-bottom: 1px solid #f6f6f6;
   width: 100%;
   height: 3rem;
@@ -137,19 +157,19 @@ body,
   letter-spacing: 0.1rem;
   color: #ffa571;
 }
-.warp section .main .main-start p {
+.warp .contained .home section .main .main-start p {
   font-size: 1.4rem;
 }
-.warp section .main .main-start p span {
+.warp .contained .home section .main .main-start p span {
   font-size: 1.2rem;
 }
-.warp section .main .main-info {
+.warp .contained .home section .main .main-info {
   background: #fff;
   display: -webkit-box;
   -webkit-box-orient: horizontal;
   border-bottom: 1px solid #f9f9f9;
 }
-.warp section .main .main-info dl {
+.warp .contained .home section .main .main-info dl {
   display: -webkit-box;
   -webkit-box-orient: horizontal;
   padding: 1rem;
@@ -158,34 +178,34 @@ body,
   height: auto;
   background: none;
 }
-.warp section .main .main-info dl dt {
+.warp .contained .home section .main .main-info dl dt {
   padding: 1rem 0;
   box-sizing: border-box;
 }
-.warp section .main .main-info dl dt img {
+.warp .contained .home section .main .main-info dl dt img {
   width: 1.7rem;
   height: auto;
   background: none;
 }
-.warp section .main .main-info dl dd {
+.warp .contained .home section .main .main-info dl dd {
   margin-left: 1rem;
 }
-.warp section .main .main-info dl dd h3 {
+.warp .contained .home section .main .main-info dl dd h3 {
   font-size: 1.4rem;
 }
-.warp section .main .main-info dl dd p {
+.warp .contained .home section .main .main-info dl dd p {
   padding-top: 1rem;
   box-sizing: border-box;
   color: #c6c6c6;
 }
-.warp section .main .main-info dl:nth-child(2) {
+.warp .contained .home section .main .main-info dl:nth-child(2) {
   border-left: 1px solid #f9f9f9;
 }
-.warp section .main .main-box {
+.warp .contained .home section .main .main-box {
   margin-top: 0.4rem;
   background: #FFFFFF;
 }
-.warp section .main .main-box .main-news {
+.warp .contained .home section .main .main-box .main-news {
   width: 100%;
   height: 3rem;
   background: none;
@@ -195,64 +215,92 @@ body,
   position: relative;
   border-bottom: 1px solid #fafafa;
 }
-.warp section .main .main-box .main-news dl dt {
+.warp .contained .home section .main .main-box .main-news dl dt {
   float: left;
   margin-right: 0.6rem;
 }
-.warp section .main .main-box .main-news dl dt img {
+.warp .contained .home section .main .main-box .main-news dl dt img {
   width: 1.78rem;
   height: auto;
   background: none;
 }
-.warp section .main .main-box .main-news dl dd p {
+.warp .contained .home section .main .main-box .main-news dl dd p {
   display: inline-block;
 }
-.warp section .main .main-box .main-news dl dd p span {
+.warp .contained .home section .main .main-box .main-news dl dd p span {
   margin-left: 0.6rem;
   display: inline-block;
 }
-.warp section .main .main-box .main-news dl dd p span b {
+.warp .contained .home section .main .main-box .main-news dl dd p span b {
   margin: 0 0.3rem;
   display: inline-block;
 }
-.warp section .main .main-box .main-news .main-arrows {
+.warp .contained .home section .main .main-box .main-news .main-arrows {
   position: absolute;
   top: 0;
   right: 1rem;
 }
-.warp section .main .main-box .main-news .main-arrows img {
+.warp .contained .home section .main .main-box .main-news .main-arrows img {
   width: 0.8rem;
   height: auto;
   background: none;
 }
-.warp section .main .main-box .main-details {
+.warp .contained .home section .main .main-box .main-details {
   padding: 0.8rem 1rem;
   box-sizing: border-box;
   border-bottom: 1px solid #f9f9f9;
   position: relative;
 }
-.warp section .main .main-box .main-details dl dt {
+.warp .contained .home section .main .main-box .main-details dl dt {
   float: left;
   margin-right: 1.3rem;
 }
-.warp section .main .main-box .main-details dl dt img {
+.warp .contained .home section .main .main-box .main-details dl dt img {
   width: 3.5rem;
   height: auto;
   background: none;
 }
-.warp section .main .main-box .main-details dl dd h5 {
+.warp .contained .home section .main .main-box .main-details dl dd h5 {
   font-size: 1.4rem;
 }
-.warp section .main .main-box .main-details dl dd p {
+.warp .contained .home section .main .main-box .main-details dl dd h5 .main-time {
+  float: right;
+  color: #a3a3a3;
+  padding-top: 0.2rem;
+  box-sizing: border-box;
+}
+.warp .contained .home section .main .main-box .main-details dl dd p {
   color: #d1d1d1;
   padding-top: 0.3rem;
   box-sizing: border-box;
 }
-.warp section .main .main-box .main-details .main-time {
-  position: absolute;
-  right: 1rem;
-  top: 1.6rem;
-  color: #a3a3a3;
+.warp .contained .two {
+  width: 100%;
+  height: auto;
+  background: #000000;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+.warp .contained .three {
+  width: 100%;
+  height: auto;
+  background: #ffc0cb;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+.warp .contained .four {
+  width: 100%;
+  height: auto;
+  background: #0000ff;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+.warp .contained .five {
+  width: 100%;
+  height: auto;
+  background: #ffff00;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
 .warp footer {
   display: -webkit-box;
@@ -261,69 +309,37 @@ body,
   height: 4.2rem;
   background: none;
   border-top: 1px solid #d9d9d9;
-}
-.warp footer .left {
-  display: -webkit-box;
-  -webkit-box-orient: horizontal;
-  width: 40%;
-  height: auto;
-  background: none;
   padding: 0.4rem 0;
   box-sizing: border-box;
 }
-.warp footer .left dl {
+.warp footer dl {
   -webkit-box-flex: 1;
   text-align: center;
 }
-.warp footer .left dl dt img {
+.warp footer dl dt img {
   width: 2rem;
   height: auto;
   background: none;
 }
-.warp footer .left dl dd {
+.warp footer dl dd {
   color: #b0b0b0;
   padding-top: 0.2rem;
   box-sizing: border-box;
 }
-.warp footer .left dl:nth-child(1) dd {
+.warp footer dl:nth-child(1) dd {
   color: #ff9c60;
 }
-.warp footer .left dl:nth-child(2) dt img {
+.warp footer dl:nth-child(2) dt img {
   width: 1.7rem;
   height: auto;
   background: none;
 }
-.warp footer .right {
-  display: -webkit-box;
-  -webkit-box-orient: horizontal;
-  width: 40%;
-  height: auto;
-  background: none;
-  padding: 0.4rem 0;
-  box-sizing: border-box;
-}
-.warp footer .right dl {
-  -webkit-box-flex: 1;
-  text-align: center;
-}
-.warp footer .right dl dt img {
-  width: 2rem;
-  height: auto;
-  background: none;
-}
-.warp footer .right dl dd {
-  color: #b0b0b0;
-  padding-top: 0.2rem;
-  box-sizing: border-box;
-}
-.warp footer .right dl:nth-child(1) dt img {
+.warp footer dl:nth-child(4) dt img {
   width: 1.8rem;
   height: auto;
   background: none;
 }
 .warp footer .centre {
-  padding: 0.4rem 0;
-  box-sizing: border-box;
   -webkit-box-flex: 1;
   text-align: center;
 }
