--- a/大实训一/day_1/登录注册/css/home.less
+++ b/大实训一/day_1/登录注册/css/home.less
@@ -1,305 +1,314 @@
 @import url(reset.css);
-html{
+html {
     font-size: 62.5%;
 }
-.full{
+.full {
     width: 100%;
     height: 100%;
 }
-.whb(@w,@h,@b){
+.whb(@w, @h, @b) {
     width: @w;
     height: @h;
     background: @b;
 }
-html,body,.warp{
+.warp,
+body,
+html {
     .full;
 }
-.box(@dir){
+.box(@dir) {
     display: -webkit-box;
     -webkit-box-orient: @dir;
 }
-.warp{
+.warp {
     .box(vertical);
-    header{
-        padding: 0 1rem;
-        box-sizing: border-box;
-        .box(horizontal);
-        .whb(100%,3.8rem,#f7f7f7);
-        line-height: 3.8rem;
-        border-bottom: 1px solid #e8e8e8;
-        .left,.right{
-            .whb(1.5rem,auto,none);
-            img{
-                .whb(100%,auto,none);
-            }
-        }
-        h1{
-            -webkit-box-flex: 1;
-            text-align: center;
-            font-size: 1.6rem;
-            color: #262626;
-        }
-    }
-    nav{
-        .box(horizontal);
-        padding: 1rem;
-        box-sizing: border-box;
-        position: relative;
-        border-bottom: 1px solid #dddddd;
-        .nav-left{
-            .whb(6.4rem,auto,none);
-            dl{
-                text-align: center;
-                dt{
-                    .whb(auto,4.8rem,none);
-                    img{
-                        .whb(4.8rem,auto,none);
-                    }
-                }
-                dd{
-                    padding-top: 0.4rem;
-                    box-sizing: border-box;
-                    color: #333333;
-                    letter-spacing: 0.1rem;
-                }
-            }
-        }
-        .nav-centre{
-            margin: 1rem 0 0 0;
-            box-sizing: border-box;
-            border-left: 1px solid #eaeaea;
-            p{
-                margin-left: 1.2rem;
-                font-size: 1.4rem;
-                span{
-                    padding-left: 0.6rem;
-                    box-sizing: border-box;
-                }
-                b{
-                   padding-left: 0.6rem;
-                    box-sizing: border-box; 
-                }
-                img{
-                    .whb(4rem,auto,none);
-                }
-            }
-            p:nth-child(2){
-                padding-top: 1.6rem;
-                box-sizing: border-box;
-                span{
-                    color: #ff846a;
-                }
-            }
-        }
-        .boult{
-            position: absolute;
-            top: 3.5rem;
-            right: 1.6rem;
-            img{
-                .whb(1rem,auto,none);
-            }
-        }
-    }
-    section{
+    overflow: hidden;
+    .contained {
         -webkit-box-flex: 1;
-        background: #f2f2f2;
-        overflow: auto;
-        &::-webkit-scrollbar{width: 0;};
-        .main{
-            margin-top: 0.8rem;
-            .main-start{
-                border-bottom: 1px solid #f6f6f6;
-                .whb(100%,3rem,#fff);
-                text-align: center;
-                line-height: 3rem;
-                letter-spacing: 0.1rem;
-                color: #ffa571;
-                p{
-                    font-size: 1.4rem;
-                    span{
-                        font-size: 1.2rem;
-                    }
-                }
-            }
-            .main-info{
-                background: #fff;
+        .box(horizontal);
+        position: relative;
+        left: 0;
+        div{
+            .whb(100%,auto,none);
+        }
+        .home {
+            .whb(100%,auto,none);
+            .box(vertical);
+            header {
+                padding: 0 1rem;
+                box-sizing: border-box;
                 .box(horizontal);
-                border-bottom: 1px solid #f9f9f9;
-                dl{
-                    .box(horizontal);
-                    padding: 1rem;
-                    box-sizing: border-box;
-                    .whb(50%,auto,none);
-                    dt{
-                        padding: 1rem 0;
-                        box-sizing: border-box;
-                        img{
-                            .whb(1.7rem,auto,none);
-                        }
-                    }
-                    dd{
-                       margin-left: 1rem;
-                       h3{
-                           font-size: 1.4rem;
-                           
-                       }
-                       p{
-                           padding-top: 1rem;
-                           box-sizing: border-box;
-                           color: #c6c6c6;
-                       }
+                .whb(100%,3.8rem,#f7f7f7);
+                line-height: 3.8rem;
+                border-bottom: 1px solid #e8e8e8;
+                .left,
+                .right {
+                    .whb(1.5rem,auto,none);
+                    img {
+                        .whb(100%,auto,none);
                     }
                 }
-                dl:nth-child(2){
-                    border-left: 1px solid #f9f9f9;
+                h1 {
+                    -webkit-box-flex: 1;
+                    text-align: center;
+                    font-size: 1.6rem;
+                    color: #262626;
                 }
             }
-            .main-box{
-                margin-top: 0.4rem;
-                background: #FFFFFF;
-                .main-news{
-                    .whb(100%,3rem,none);
-                    padding: 0 1rem;
-                    box-sizing: border-box;
-                    line-height: 3rem;
-                    position: relative;
-                    border-bottom: 1px solid #fafafa;
-                    dl{
-                        dt{
-                            float: left;
-                            margin-right: 0.6rem;
-                            img{
-                                .whb(1.78rem,auto,none);
+            nav {
+                .box(horizontal);
+                padding: 1rem;
+                box-sizing: border-box;
+                position: relative;
+                border-bottom: 1px solid #dddddd;
+                .nav-left {
+                    .whb(6.4rem,auto,none);
+                    dl {
+                        text-align: center;
+                        dt {
+                            .whb(auto,4.8rem,none);
+                            img {
+                                .whb(4.8rem,auto,none);
                             }
                         }
-                        dd{
-                            p{
-                                display: inline-block;
-                                span{
-                                    margin-left: 0.6rem;
-                                    display: inline-block;
-                                    b{
-                                        margin: 0 0.3rem;
+                        dd {
+                            padding-top: 0.4rem;
+                            box-sizing: border-box;
+                            color: #333333;
+                            letter-spacing: 0.1rem;
+                        }
+                    }
+                }
+                .nav-centre {
+                    margin: 1rem 0 0;
+                    box-sizing: border-box;
+                    border-left: 1px solid #eaeaea;
+                    p {
+                        margin-left: 1.2rem;
+                        font-size: 1.4rem;
+                        span {
+                            padding-left: 0.6rem;
+                            box-sizing: border-box;
+                        }
+                        b {
+                            padding-left: 0.6rem;
+                            box-sizing: border-box;
+                        }
+                        img {
+                            .whb(4rem,auto,none);
+                        }
+                    }
+                    p:nth-child(2) {
+                        padding-top: 1.6rem;
+                        box-sizing: border-box;
+                        span {
+                            color: #ff846a;
+                        }
+                    }
+                }
+                .boult {
+                    position: absolute;
+                    top: 3.5rem;
+                    right: 1.6rem;
+                    img {
+                        .whb(1rem,auto,none);
+                    }
+                }
+            }
+            section {
+                -webkit-box-flex: 1;
+                background: #f2f2f2;
+                overflow: auto;
+                &::-webkit-scrollbar {
+                    width: 0;
+                };
+                .main {
+                    margin-top: 0.8rem;
+                    .main-start {
+                        border-bottom: 1px solid #f6f6f6;
+                        .whb(100%,3rem,#fff);
+                        text-align: center;
+                        line-height: 3rem;
+                        letter-spacing: 0.1rem;
+                        color: #ffa571;
+                        p {
+                            font-size: 1.4rem;
+                            span {
+                                font-size: 1.2rem;
+                            }
+                        }
+                    }
+                    .main-info {
+                        background: #fff;
+                        .box(horizontal);
+                        border-bottom: 1px solid #f9f9f9;
+                        dl {
+                            .box(horizontal);
+                            padding: 1rem;
+                            box-sizing: border-box;
+                            .whb(50%,auto,none);
+                            dt {
+                                padding: 1rem 0;
+                                box-sizing: border-box;
+                                img {
+                                    .whb(1.7rem,auto,none);
+                                }
+                            }
+                            dd {
+                                margin-left: 1rem;
+                                h3 {
+                                    font-size: 1.4rem;
+
+                                }
+                                p {
+                                    padding-top: 1rem;
+                                    box-sizing: border-box;
+                                    color: #c6c6c6;
+                                }
+                            }
+                        }
+                        dl:nth-child(2) {
+                            border-left: 1px solid #f9f9f9;
+                        }
+                    }
+                    .main-box {
+                        margin-top: 0.4rem;
+                        background: #FFFFFF;
+                        .main-news {
+                            .whb(100%,3rem,none);
+                            padding: 0 1rem;
+                            box-sizing: border-box;
+                            line-height: 3rem;
+                            position: relative;
+                            border-bottom: 1px solid #fafafa;
+                            dl {
+                                dt {
+                                    float: left;
+                                    margin-right: 0.6rem;
+                                    img {
+                                        .whb(1.78rem,auto,none);
+                                    }
+                                }
+                                dd {
+                                    p {
                                         display: inline-block;
+                                        span {
+                                            margin-left: 0.6rem;
+                                            display: inline-block;
+                                            b {
+                                                margin: 0 0.3rem;
+                                                display: inline-block;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                            .main-arrows {
+                                position: absolute;
+                                top: 0;
+                                right: 1rem;
+                                img {
+                                    .whb(0.8rem,auto,none);
+                                }
+                            }
+                        }
+                        .main-details {
+                            padding: 0.8rem 1rem;
+                            box-sizing: border-box;
+                            border-bottom: 1px solid #f9f9f9;
+                            position: relative;
+                            dl {
+                                dt {
+                                    float: left;
+                                    margin-right: 1.3rem;
+                                    img {
+                                        .whb(3.5rem,auto,none);
+                                    }
+                                }
+                                dd {
+                                    h5 {
+                                        font-size: 1.4rem;
+                                        .main-time {
+                                            float: right;
+                                            color: #a3a3a3;
+                                            padding-top: 0.2rem;
+                                            box-sizing: border-box;
+                                        }
+                                    }
+                                    p {
+                                        color: #d1d1d1;
+                                        padding-top: 0.3rem;
+                                        box-sizing: border-box;
                                     }
                                 }
                             }
                         }
                     }
-                    .main-arrows{
-                        position: absolute;
-                        top: 0;
-                        right: 1rem;
-                        img{
-                            .whb(0.8rem,auto,none);
-                        }
-                    }
-                }
-                .main-details{
-                    padding: 0.8rem 1rem;
-                    box-sizing: border-box;
-                    border-bottom: 1px solid #f9f9f9;
-                    position: relative;
-                    dl{
-                        dt{
-                            float: left;
-                            margin-right: 1.3rem;
-                            img{
-                                .whb(3.5rem,auto,none);
-                            }
-                        }
-                        dd{
-                            h5{
-                                font-size: 1.4rem;
-                            }
-                            p{
-                                color: #d1d1d1;
-                                padding-top: 0.3rem;
-                                box-sizing: border-box;
-                            }
-                        }
-                    }
-                    .main-time{
-                        position: absolute;
-                        right: 1rem;
-                        top: 1.6rem;
-                        color: #a3a3a3;
-                    }
                 }
             }
         }
+        .two{
+            .whb(100%,auto,#000);
+            .box(vertical);
+        }
+        .three{
+            .whb(100%,auto,pink);
+            .box(vertical);
+        }
+        .four{
+            .whb(100%,auto,blue);
+            .box(vertical);
+        }
+        .five{
+            .whb(100%,auto,yellow);
+            .box(vertical);
+        }
     }
-    footer{
+    footer {
         .box(horizontal);
         .whb(100%,4.2rem,none);
         border-top: 1px solid #d9d9d9;
-        .left{
-            .box(horizontal);
-            .whb(40%,auto,none);
-            padding: 0.4rem 0;
-            box-sizing: border-box;
-            dl{              
-                -webkit-box-flex: 1;
-                text-align: center;
-                dt{
-                    img{
-                        .whb(2rem,auto,none);
-                    }
-                }
-                dd{
-                    color: #b0b0b0;
-                    padding-top: 0.2rem;
-                    box-sizing: border-box;
+        padding: 0.4rem 0;
+        box-sizing: border-box;
+        dl {
+            -webkit-box-flex: 1;
+            text-align: center;
+            dt {
+                img {
+                    .whb(2rem,auto,none);
                 }
             }
-            dl:nth-child(1){
-                dd{
-                    color: #ff9c60;
-                }
+            dd {
+                color: #b0b0b0;
+                padding-top: 0.2rem;
+                box-sizing: border-box;
             }
-            dl:nth-child(2){
-                dt{
-                    img{
-                        .whb(1.7rem,auto,none);
-                    }
+        }
+        dl:nth-child(1) {
+            dd {
+                color: #ff9c60;
+            }
+        }
+        dl:nth-child(2) {
+            dt {
+                img {
+                    .whb(1.7rem,auto,none);
                 }
             }
         }
-        .right{
-            .box(horizontal);
-            .whb(40%,auto,none);
-            padding: 0.4rem 0;
-            box-sizing: border-box;
-            dl{              
-                -webkit-box-flex: 1;
-                text-align: center;
-                dt{
-                    img{
-                        .whb(2rem,auto,none);
-                    }
-                }
-                dd{
-                    color: #b0b0b0;
-                    padding-top: 0.2rem;
-                    box-sizing: border-box;
-                }
-            }
-            dl:nth-child(1){
-                dt{
-                    img{
-                        .whb(1.8rem,auto,none);
-                    }
+        dl:nth-child(4) {
+            dt {
+                img {
+                    .whb(1.8rem,auto,none);
                 }
             }
         }
-        .centre{
-           padding: 0.4rem 0;
-           box-sizing: border-box;
-           -webkit-box-flex: 1;
-           text-align: center;
-           img{
-               .whb(3.8rem,auto,none);
-           }
+        .centre {
+            -webkit-box-flex: 1;
+            text-align: center;
+            img {
+                .whb(3.8rem,auto,none);
+            }
         }
     }
 }
