--- a/大实训一/day_1/登录注册/css/reset.css
+++ b/大实训一/day_1/登录注册/css/reset.css
@@ -23,11 +23,14 @@ body {
 	-moz-user-focus: none;
 	-moz-user-select: none;
 }
-a{text-decoration: none; color: #666;}
-a:hover{color: #00f;}
+a{text-decoration: none;}
 h2{ margin:0; padding: 0;}
 ul{word-spacing: -4px;}
-/*垂直居中对齐*/
+
 input,img{
-	vertical-align: middle;
+	vertical-align: middle;/*垂直居中对齐*/
+}
+
+*,*:after,*:before{
+	-webkit-box-sizing: border-box;
 }
